--- a/app/views/memos/top.html.erb
+++ b/app/views/memos/top.html.erb
@@ -1,10 +1,8 @@
 <% if user_signed_in? %> <!-- ユーザーがログインしているか調べる -->
-    <!-- ユーザーがログインしていた時の処理 -->
-    <h1>Memo List</h1>
+    <h1>Memo List</h1><!-- ユーザーがログインしていた時の処理 -->
     <% @memos. each do |memo| %>
         <div class="col-sm-4">
             <div class="panel panel-warning">
-          
               <div class="panel-heading">
                 <h3 class="panel-title">
                   <h4><%= memo.title %></h4>
@@ -21,6 +19,7 @@
             </div>
         </div>    
     <% end %>
+    
 <% else %>
     <!-- ユーザーがログインしていなかった時の処理-->
     <div class="jumbotron">
@@ -31,27 +30,6 @@
       <%= link_to "新規登録", new_user_registration_path, class: 'post btn btn-success' %> <!--新規登録画面に移行する -->
     </div>
 <% end %>
-
-
-<!--<h1>Memo List</h1>-->
-<!--    <% @memos. each do |memo| %>-->
-<!--        <div class="col-sm-4">-->
-<!--            <div class="panel panel-warning">-->
-          
-<!--              <div class="panel-heading">-->
-<!--                <h3 class="panel-title">-->
-<!--                  <h4><%= memo.title %></h4>-->
-<!--                  <p><%= memo.category.name %></p>-->
-<!--                  <div class="bottons">-->
-<!--                      <a class = "hover" href ="/memos/<%= memo.id %>" data-method="delete"><span class="glyphicon glyphicon-trash"></span>削除</a>-->
-<!--                      <a class = "hover" href ="/memos/<%= memo.id %>/edit" data-method="get"><span class="glyphicon glyphicon-edit"></span>編集</a>-->
-<!--                  </div>-->
-<!--                </h3>-->
-<!--              </div>-->
-<!--              <div class="panel-body">-->
-<!--                <%= memo.body %>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--        </div>    -->
-<!--    <% end %>-->
-
+<div class="page">
+    <%= will_paginate @memos, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
+</div>
